fix the cannot deserialize error for blueprint
