# Gallery.Api/ViewModels/ExhibitRoleLookup.cs
@@ -1,0 +1,13 @@
+// Copyright 2026 Carnegie Mellon University. All Rights Reserved.
+// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.
+
+using System;
+
+namespace Gallery.Api.ViewModels
+{
+    public class ExhibitRoleLookup
+    {
+        public Guid Id { get; set; }
+        public string Name { get; set; }
+    }
+}
